Mobile view initiation

--- a/diary/index.html
+++ b/diary/index.html
@@ -6,7 +6,9 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="accesories.css">
+  	<link rel="stylesheet" href="mob_view.css">
 
+  
 	<!-- fonts -->
 
 	<!-- <link href='http://fonts.googleapis.com/css?family=Montserrat:light'>
@@ -35,7 +37,7 @@
 		<div class="settings-content" id='About'>About Us</div>
 	</div>
 	<div class="main">
-
+    
 		<div class="writing-area">
 			
 			<form action=""><textarea class="write" placeholder="Pen down your thoughts here ..."></textarea>
